ページ遷移の実装

--- a/html/result.html
+++ b/html/result.html
@@ -14,9 +14,11 @@
 <body class="white">
   <p class="title tx_black" id="fifpuzzle">ゲームクリア</p>
   <div class="text tx_black" id="desc">おめでとうございます</div>
-  <div class="black button" id="startbutton">
-    <div class="bt_text tx_white text">もう一度プレイ</div>
-  </div>
+  <a href="./[Work]play.html">
+    <div class="black button" id="startbutton">
+      <div class="bt_text tx_white text">もう一度プレイ</div>
+    </div>
+  </a>
   <div class="gray frout_black frame" id="sample">
     <div class="container">
       <div class="block blue">
