--- a/html/home.html
+++ b/html/home.html
@@ -14,66 +14,70 @@
 <body class="white">
   <p class="title tx_black" id="fifpuzzle">15パズル</p>
   <div class="text tx_black" id="desc">15パズルは、<br>ブロックをスライドさせて<br>この形にするゲームです。</div>
-  <div class="black button" id="startbutton">
-    <div class="bt_text tx_white text">始める</div>
-  </div>
-  <div class="gray frout_black frame" id="sample">
-    <div class="container">
-      <div class="block blue">
-        <div class="text tx_white bl_text bold">1</div>
-      </div>
-      <div class="block blue">
-        <div class="text tx_white bl_text bold">2</div>
-      </div>
-      <div class="block blue">
-        <div class="text tx_white bl_text bold">3</div>
-      </div>
-      <div class="block blue">
-        <div class="text tx_white bl_text bold">4</div>
-      </div>
+  <a href="[Work]play.html">
+    <div class="black button" id="startbutton">
+      <div class="bt_text tx_white text">始める</div>
     </div>
+  </a>
+  <div id="base">
+    <div class="gray frout_black frame" id="right">
+      <div class="container">
+        <div class="block blue">
+          <div class="text tx_white bl_text bold">1</div>
+        </div>
+        <div class="block blue">
+          <div class="text tx_white bl_text bold">2</div>
+        </div>
+        <div class="block blue">
+          <div class="text tx_white bl_text bold">3</div>
+        </div>
+        <div class="block blue">
+          <div class="text tx_white bl_text bold">4</div>
+        </div>
+      </div>
 
-    <div class="container">
-      <div class="block orange">
-        <div class="text tx_white bl_text bold">5</div>
+      <div class="container">
+        <div class="block orange">
+          <div class="text tx_white bl_text bold">5</div>
+        </div>
+        <div class="block orange">
+          <div class="text tx_white bl_text bold">6</div>
+        </div>
+        <div class="block orange">
+          <div class="text tx_white bl_text bold">7</div>
+        </div>
+        <div class="block orange">
+          <div class="text tx_white bl_text bold">8</div>
+        </div>
       </div>
-      <div class="block orange">
-        <div class="text tx_white bl_text bold">6</div>
-      </div>
-      <div class="block orange">
-        <div class="text tx_white bl_text bold">7</div>
-      </div>
-      <div class="block orange">
-        <div class="text tx_white bl_text bold">8</div>
-      </div>
-    </div>
 
-    <div class="container">
-      <div class="block yellow">
-        <div class="text tx_white bl_text bold">9</div>
+      <div class="container">
+        <div class="block yellow">
+          <div class="text tx_white bl_text bold">9</div>
+        </div>
+        <div class="block yellow">
+          <div class="text tx_white bl_text bold">10</div>
+        </div>
+        <div class="block yellow">
+          <div class="text tx_white bl_text bold">11</div>
+        </div>
+        <div class="block yellow">
+          <div class="text tx_white bl_text bold">12</div>
+        </div>
       </div>
-      <div class="block yellow">
-        <div class="text tx_white bl_text bold">10</div>
-      </div>
-      <div class="block yellow">
-        <div class="text tx_white bl_text bold">11</div>
-      </div>
-      <div class="block yellow">
-        <div class="text tx_white bl_text bold">12</div>
-      </div>
-    </div>
 
-    <div class="container">
-      <div class="block green">
-        <div class="text tx_white bl_text bold">13</div>
-      </div>
-      <div class="block green">
-        <div class="text tx_white bl_text bold">14</div>
-      </div>
-      <div class="block green">
-        <div class="text tx_white bl_text bold">15</div>
-      </div>
-      <div class="block">
+      <div class="container">
+        <div class="block green">
+          <div class="text tx_white bl_text bold">13</div>
+        </div>
+        <div class="block green">
+          <div class="text tx_white bl_text bold">14</div>
+        </div>
+        <div class="block green">
+          <div class="text tx_white bl_text bold">15</div>
+        </div>
+        <div class="block">
+        </div>
       </div>
     </div>
   </div>
