--- a/タイマー/index.html
+++ b/タイマー/index.html
@@ -7,6 +7,7 @@
 <body>
   <div id="app">
     <div style="font-size: 100px;">{{ minutes }}:{{ seconds }}</div>
+    <button v-on:click="stop">stop</button>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/vue"></script>
   <script src="main.js"></script>
