--- a/html/[Work]play.html
+++ b/html/[Work]play.html
@@ -13,6 +13,7 @@
 <body class="white">
   <div id="base">
     <div id="app">
+      <div class="timer tx_black">{{ minutes }}:{{ seconds }}</div>
       <div class="gray frout_black frame" id="sample">
         <div class="container">
           <div class="block" v-bind:class="blockData[0][0].color" v-on:click="clickEvent(0,0)">
