ブロックをv-forで表記した。 checkHole関数の作成。

--- a/html/result.html
+++ b/html/result.html
@@ -14,7 +14,7 @@
 <body class="white">
   <p class="title tx_black" id="fifpuzzle">ゲームクリア</p>
   <div id="app">
-    <div class="text tx_black" id="desc">クリア時間は{{minutes}}{{seconds}}秒です。</div>
+    <div class="text tx_black" id="desc">クリア時間は{{minutes}}分{{seconds}}秒です。</div>
   </div>
   <a href="./[Work]play.html">
     <div class="black button" id="startbutton">
