--- a/html/[Work]play.html
+++ b/html/[Work]play.html
@@ -17,7 +17,7 @@
         <div class="gray frout_black frame" id="sample">
           <div v-for="(bData, index) in blockData">
             <div class="container">
-              <div class="block" v-for="data in bData" v-bind:class="data.color" v-on:click="clickEvent(data.id,index)">
+              <div class="block" v-for="(data, id) in bData" v-bind:class="data.color" v-on:click="clickEvent(id,index)">
                 <div class="text tx_white bl_text bold">
                   {{ data.number }}
                 </div>
