リンクの変更

--- a/html/result.html
+++ b/html/result.html
@@ -16,7 +16,7 @@
   <div id="app">
     <div class="text tx_black" id="desc">クリア時間は{{minutes}}分{{seconds}}秒です。</div>
   </div>
-  <a href="./[Work]play.html">
+  <a href="./play.html">
     <div class="black button" id="startbutton">
       <div class="bt_text tx_white text">もう一度プレイ</div>
     </div>
