ファイルの変更

--- a/html/home.html
+++ b/html/home.html
@@ -14,7 +14,7 @@
 <body class="white">
   <p class="title tx_black" id="fifpuzzle">15パズル</p>
   <div class="text tx_black" id="desc">15パズルは、<br>ブロックをスライドさせて<br>この形にするゲームです。</div>
-  <a href="[Work]play.html">
+  <a href="play.html">
     <div class="black button" id="startbutton">
       <div class="bt_text tx_white text">始める</div>
     </div>
